welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:1: error: Missing closing brace `}' assumed here
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
^